# rlaif-trader

./: .env.example  .gitignore  ARCHITECTURE.md  DATA_FETCHING_ANALYSIS.md  DEPLOYMENT.md  FIXES_APPLIED.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  LICENSE  README.md  RLAIF_GUIDE.md  RUNPOD_REVIEW.md  USABILITY_IMPROVEMENTS_COMPLETE.md  USABILITY_REVIEW.md  main.py  pyproject.toml  run_backtest.py  run_trading.py  setup.py  setup.sh
configs/: autotrader.yaml  config.yaml
deployment/: QUICKSTART.md
deployment/api/: __init__.py  main.py
deployment/docker/: .dockerignore  Dockerfile  Dockerfile.minimal
deployment/runpod/: __init__.py  handler.py  runpod-config.yaml
docs/plans/: 2026-03-30-chat-cli.md  2026-03-30-paper-mvp-and-backtest.md  2026-03-30-pipeline-stabilization.md
scripts/: build_docker.sh  deploy_runpod.py  example_multi_agent.py  example_pipeline.py  example_reward_guided_inference.py  example_rlaif_training.py  quickstart.py
src/: __init__.py  backtester.py  chat_interface.py  cli.py  pipeline.py  serve.py  train.py
src/agents/: __init__.py  base_agent.py  base_agent_v2.py  claude_cli_client.py  claude_client.py  fundamental_analyst.py  llm_client_factory.py  manager_agent.py  mlx_client.py  rag_system.py  risk_analyst.py  sentiment_analyst.py  technical_analyst.py
src/analysis/: __init__.py  recommendation.py
src/autotrader/: __init__.py  dashboard.py  experiment_log.py  experiment_runner.py  metrics.py  orchestrator.py  rlaif_bridge.py  safety.py  sentinel.py  settings_manager.py  strategist.py  strategy_spec.py  strategy_swapper.py  thesis_generator.py
src/backtesting/: __init__.py  runner.py
src/clients/: __init__.py  python_client.py
src/data/: __init__.py
src/data/ingestion/: __init__.py  ccxt_client.py  fundamental_client.py  market_data.py  news_client.py
src/data/processing/: __init__.py  preprocessor.py
src/execution/: __init__.py  alerts.py  binance_broker.py  broker.py  ibkr_broker.py  oms.py  portfolio.py  risk_engine.py  risk_manager.py  scheduler.py
src/features/: __init__.py  fundamental.py  sentiment.py  technical.py
src/models/: __init__.py  conformal.py  mlx_manager.py  regime_detector.py  world_model.py
src/models/foundation/: __init__.py  base.py  fine_tune.py  kronos_wrapper.py  mamba_wrapper.py  timesfm_wrapper.py  ttm_wrapper.py
src/options/: __init__.py  chains.py  flow_analyzer.py  greeks.py  ivs_forecaster.py  options_analyst.py  strategies.py  vol_surface.py
src/rlaif/: __init__.py  composite_reward.py  options_outcome_tracker.py  outcome_tracker.py  preference_generator.py  reasoning_verifier.py  reward_model.py  rlaif_finetuner.py
src/strategies/: __init__.py  agent_strategy.py  base.py  ensemble.py  mean_reversion.py  momentum.py
src/utils/: __init__.py  config.py  logging.py  seed.py
tests/: test_autotrader_controls.py  test_backtesting_runner.py  test_chat_interface.py  test_cli.py  test_execution_flow.py  test_pipeline.py
